--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -14,6 +14,8 @@
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
+  <%= render "shared/nav" %>
+
   <% if current_user.is_a?(User) %>
     <%= link_to "Logout", destroy_user_session_path, method: :delete %>
   <% else %>
@@ -22,14 +24,6 @@
   <% end %>
     
     <%= yield %>
-
-  <div>
-    <div><%= link_to "Home", root_path %></div>
-    <div><%= link_to "About", about_path %></div>
-    <div><%= link_to "Contacts", contact_path %></div>
-    <div><%= link_to "Blog", blogs_path %></div>
-    <div><%= link_to "Portfolio", portfolios_path %> </div>
-  </div>
 
     <% if session[:source] %>
       <p>Thanks for visiting me from <%= session[:source] %> </p>
