--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,9 +1,26 @@
-<h1>Pages#contact</h1>
+<h1>Let's work together!</h1>
 
-<p><%= number_to_phone "5555555555" %></p>
+<hr>
 
-<p><%= number_to_currency "150" %></p
+<div class="row">
+  <div class = "col-md-6">
+    <h3>Phone</h3>
+    
+    <p><%= number_to_phone "2083603198" %></p>
 
-<p><%= number_to_percentage "80.5" %></p>
+    <h3>Email</h3>
 
-<p><%= number_with_delimiter "4589834534098" %></p>
+    <p><a href="mailto:rcswainston@gmail.com?subject=PortfolioContact" "email me">rcswainston@gmail.com</a> </p>
+
+  </div>
+
+  <div class = "col-md-6">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46976.40850629154!2d-113.70845355015814!3d42.61841451746646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54ab2ffda10baf6d%3A0xa6ae1e0dbb52bb61!2sRupert%2C+ID+83350!5e0!3m2!1sen!2sus!4v1497920613748" width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </div>
+</div>
+
+
+
+
+
+
