--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -22,23 +22,15 @@
     <!--Start of blog header -->
      <div class="blog-header">
       <div class="container">
-        <h1 class="blog-title">The Bootstrap Blog</h1>
+        <h1 class="blog-title">My Blog</h1>
         <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+        <%= link_to 'Write a New Blog Post', new_blog_path if logged_in?(:site_admin) %>
       </div>
     </div>
-    <!--End of blog header -->
-
     
-    <!-- Start of container and row element -->
     <div class="container">
 
       <div class="row">
-
-    <!-- End -->
-
-
-
-        
         
         <%= yield %>
 
@@ -75,7 +67,7 @@
           </div>
         </div>
         <!-- end of sidebar -->
-
+      </div>
         <!--start of footer -->
         <footer class="blog-footer">
           <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
@@ -86,10 +78,9 @@
 
         <!--end of footer -->
 
-        <%= render "shared/nav", location: 'bottom' %>
 
         <%= source_helper("blog") %>
-      </div>
+      
     </div>
   </body>
 </html>
